# Branch-Predictor-Simulator

./: .gitignore  Makefile  README.md
branch-predictor-simulator/: .gitignore  CMakeLists.txt  LICENSE  Makefile
branch-predictor-simulator/include/: branch_predictor.hpp  predictors.hpp  simulator.hpp
branch-predictor-simulator/src/: main.cpp  simulator.cpp  statistics.cpp
branch-predictor-simulator/tests/: test_cli.cpp  test_predictors.cpp  test_simulator.cpp
branch-predictor-simulator/traces/: alternating.trace  mostly_taken.trace  simple.trace
include/: predictor.h  predictors.hpp  statistics.hpp  trace.h  trace_parser.hpp
src/: main.cpp  predictor.cpp  predictors.cpp  simulator.cpp  statistics.cpp  trace.cpp  trace_parser.cpp
tests/: test_trace_parser.cpp  tests.cpp
traces/: loop.trace
